# my-analysis

./: .gitignore  LICENSE  README.md  calkit.yaml  dvc.yaml  pyproject.toml
.calkit/: overleaf-sync.json
.calkit/env-locks/tex/: amd64.json
.calkit/notebooks/html/notebooks/: main.html
.devcontainer/: devcontainer.json
.dvc/: config
data/raw/: penguins.csv
notebooks/: main.ipynb
paper/: .gitignore  main.tex  results.tex
paper/tables/: ols-summary.tex
results/: vif.json
tables/: ols-summary.tex
