[project]
name = "example-analytics"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "great-tables>=0.20.0",
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "polars>=1.35.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "xgboost>=3.1.1",
]
